--- a/1style.css
+++ b/1style.css
@@ -3,9 +3,9 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 img{
-width: 250px;
+width: 355px;
 border: 50%;
-text-align:left;
+text-align:center;
 
 }
 
@@ -59,9 +59,9 @@ text-align:left;
    color:  white;
    padding: 10px;
    background: black;
-   margin: 10px;
+   margin: 20px;
    border-radius: 0%;
-   width: 5%;
+   width: 20%;
    text-decoration: none;
    text-align: center;
 
@@ -71,8 +71,8 @@ text-align:left;
    color:  white;
    padding: 10px;
    background: black;
-   margin: 10px;
-   width: 10%;
+   margin: 20px;
+   width: 20%;
    border-radius: 0%;
    text-decoration: none;
    text-align: center
