--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-  background-color: #04AA6D;
+  background-color: #020202;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -166,7 +166,7 @@ span.psw {
 
 .close:hover,
 .close:focus {
-  color: red;
+  color:black;
   cursor: pointer;
 }
 
