--- a/style.css
+++ b/style.css
@@ -226,8 +226,8 @@ body {
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-  float: left;
-  width: 25%;
+  float: left ;
+  width: 25px;
   padding: 10px;
 }
 
