--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ body {
 
 /* Closable button inside the expanded image */
 .closebtn {
-  position: absolute;
+  position: relative ;
   top: 10px;
   right: 15px;
   color: white;
