--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ body {
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-  display: inline-table;
+  display: inline ;
   width: 25px;
   padding: 10px;
 }
