--- a/style.css
+++ b/style.css
@@ -219,14 +219,10 @@ span.psw {
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  font-family: Arial;
-}
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-  display: inline ;
+  position: absolute ;
   width: 25px;
   padding: 10px;
 }
