--- a/style.css
+++ b/style.css
@@ -218,11 +218,14 @@ body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
 
+/* change image every 60 seconds
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
+  
 }
 
 /* Caption text */
@@ -236,7 +239,7 @@ img {vertical-align: middle;}
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/10 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
