--- a/style.css
+++ b/style.css
@@ -13,8 +13,11 @@ img{
   width: 355px;
   border: 50;
   text-align:center;
-  
+
   }
+
+
+
 
 .sidenav {
   height: 100%;
@@ -197,7 +200,7 @@ span.psw {
   }
 }
 
-.btn{
+.btn50{
   display: block;
  color:  white;
  padding: 10px;
@@ -318,13 +321,19 @@ body {
 }
 
 /* Style the buttons */
-.btn50 {
+.btn {
   border: none;
   outline: none;
   padding: 10px 16px;
   background-color: #f1f1f1;
   cursor: pointer;
   font-size: 18px;
+  margin: 10px;
+ border-radius: 0%;
+ width: 10%;
+ text-decoration: none;
+ text-align: center;
+
 }
 
 .btn:hover {
