--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ span.psw {
 
 .btn50{
   display: block;
- color:  white;
+ color: #f1f1f1;
  padding: 10px;
  background: black;
  margin: 20px;
